name:                xml-types-xmlbf
version:             0.0.1.0
synopsis:            Orphan xmlbf To and From Xml instances for the xml-types library types
description:         Orphan instances to translate between xmlbf and xml-types xml types.
license:             BSD3
license-file:        LICENSE
author:              John Soo
maintainer:          jsoo1@asu.edu
copyright:           2020 John Soo
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         ghc == 9.2.8

library
  exposed-modules: Data.XML.Types.Xmlbf
  build-depends: base
               , html-entities
               , text
               , unordered-containers
               , xmlbf
               , xml-types
  hs-source-dirs: .
  default-language:    Haskell2010
